Mon Oct  4 08:59:13 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c (bse_midi_device_alsa_open): 
	* bsepcmdevice-alsa.c (bse_pcm_device_alsa_open): silence alsalib during
	open() calls to avoid EBUSY error messages.

Sun Oct  3 19:02:46 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.c (alsa_device_check_io): fixed signed/unsigned
	comparison bug, reported by stefan.

Sat Oct  2 04:54:22 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c (bse_midi_device_alsa_open): open devices 
	non-blocking so we don't hang on concurrent access.

Wed Sep 29 20:22:53 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c: poll-fd fixups. removed debugging code.

Wed Sep 29 19:51:29 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c: handle IO through sequencer io watch.

Tue Sep 28 04:25:21 2004  Tim Janik  <timj@gtk.org>

	* configure.in: fixed up package name.

	* README: describe installation path handling of this package.

	* Makefile.am: fix include paths.

Tue Sep 28 01:45:21 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c: preliminary implementation of read handler.

Tue Sep 28 00:57:57 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.c (alsa_device_write): issue dummy reads instead of
	calling snd_pcm_forward() which produces annoying debugging messages.

Tue Sep 28 00:38:31 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.h: 
	* bsemididevice-alsa.c: object skeleton for a an ALSA MIDI driver.

Mon Sep 27 09:48:16 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.[hc]: implemented ALSA pcm driver plugin,
	that works down to 1ms latency.

	* configure.in: plugin package setup, version 0.6.3-rc1.